--- a/README
+++ b/README
@@ -6,8 +6,9 @@
 
 1. What is UFM?
 UFM is a Norton Commander style filemanager
-which let you manage all your files and
-directories. UFM is developed using ca65.
+for the Commancer x16, which let you manage 
+all your files and directories. 
+UFM is developed using ca65.
 
 2. Main features
 
