--- a/README
+++ b/README
@@ -33,6 +33,8 @@ UFM is developed using ca65.
 - Tab:			switch between left and right window
 - Enter:		change to selected directory or
 				launch selected file (if launchable)
+- [SHIFT]+Enter:load the program in to memory and start via basic run
+				will not return to UFM when finished
 - Backspace:	move one directory up
 - F2:			display file info
 - F3:			select device/partition
@@ -96,109 +98,7 @@ prompted to choose a supported one.
 - restore windows to state before launching a program when returning
   from a program
 - Multiselect files/directory's to copy, delete or move
-- SHIFT+[ENTER] launches a program 'as is' without returning to UFM
-
-				
-						
-						
-
-       Ultimate File Manager v1.2
-	   
-	           User Guide
-			   
-
-1. What is UFM?
-UFM is a Norton Commander style filemanager
-which let you manage all your files and
-directories. UFM is developed using ca65.
-
-2. Main features
-
-- Browse through directories and files
-- Copy, Rename, Move and Delete files
-- Rename and Delete directories
-- Launch tokenized basic files 
-- Launch Machine Language files
-- Return to UFM automaticly when a launched 
-  program finishes
-- Support for (SNES)-controller
-- Support for all screen modes with 40+ cols
-- Multi-device/partition support
-
-3. Keys
-- Arrow Down:	move pointer one line down
-- Arrow Up:		move pointer one line up
-- Page Down:	move pointer one list size down
-- Page Up:		move pointer one list size up
-- Home:			move pointer to first directory or file
-- End:			move pointer to last directory of file
-- Tab:			switch between left and right window
-- Enter:		change to selected directory or
-				launch selected file (if launchable)
-- Backspace:	move one directory up
-- F2:			display file info
-- F3:			select device/partition
-- F4:			edit file with xEdit
-- F5:			copy selected file to directory in other window
-- F6:			rename selected file
-- F7:			move selected file to other directory
-				!!currently only supported with hostfs.
-				!!waiting for a rom update to enable moving on sd-card
-- F8:			create directory
-- F10:			Quit UFM
-- Del:			delete selected file or directory
-- Ctrl +		switch to next supported screen mode
-- Ctrl -		switch to previous supported screen mode				
-
-4. Joystick/SNES controller
-UFM supports the use of a SNES controller plugged into port #1
-Buttons:
-- A:			change to selected directory or
-				launch selected file (if launchable)
-- B:			display action menu
-- L:			switch to previous supported screen mode
-- R:			switch to next supported screen mode
-- Left/Right:	switch to other window
-- Down/Up:		move pointer to previous or next line
-- Select:		change device/partition
-Note: if an action requires user input, for example the name of a
-new directory or when renaming a file, the keyboard shold be used.
-
-5. Supported screen modes:
-- 80x60
-- 80x40
-- 40x60
-- 40x30
-- 40x15
-- 64x50
-- 64x25
-UFM adopts the screen mode the user is currently in.
-If that screen mode is not supported, the user is
-prompted to choose a supported one.
-
-5. Limitations
-- Launch&Return only works if program is less then 36.632 bytes and 
-  does not use memory region $9718 and up. This does only apply to the
-  RAM-version of UFM. The ROM version can work with any size program.
-- Only the first 51.000 files and directory's of of a directoy 
-  are displayed.
-
-6. Tips
-- Hit CTRL and + to switch to 80x30 screenmode for better readability
-- Launch the emulator with: 
-      x16emu -hostfsdev 9 -sdcard 2part.img
-  and you can hit F3 in UFM to select hostfs on one window and the sd-card on
-  the other window, to easily copy files betwene hostfs and sd-card
-
-7. Todo
-- Filter/search option
-- copy/delete directory including subdirectory and files
-- sorting files
-- file viewer text/hex
-- restore windows to state before launching a program when returning
-  from a program
-- Multiselect files/directory's to copy, delete or move
-- SHIFT+[ENTER] launches a program 'as is' without returning to UFM
+- Remember user screen mode before launching
 
 				
 						
